deploy/k8s/base/library/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: library
spec:
  selector:
    app: auth
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
      protocol: TCP
