deploy/k8s/base/library/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: library
spec:
  selector:
    app: catalog
  ports:
    - name: grpc
      port: 50052
      targetPort: 50052
      protocol: TCP
