deploy/k8s/base/library/reservation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservation
  namespace: library
spec:
  selector:
    app: reservation
  ports:
    - name: grpc
      port: 50053
      targetPort: 50053
      protocol: TCP
