deploy/k8s/base/library/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search
  namespace: library
spec:
  selector:
    app: search
  ports:
    - name: grpc
      port: 50054
      targetPort: 50054
      protocol: TCP
